testdata/baselines/reference/submodule/conformance/jsdocTemplateTag3.errors.txt
a.js(6,12): error TS2304: Cannot find name 'T'.
a.js(7,12): error TS2304: Cannot find name 'U'.
a.js(8,12): error TS2304: Cannot find name 'V'.
a.js(9,12): error TS2304: Cannot find name 'W'.
a.js(10,12): error TS2304: Cannot find name 'X'.
a.js(11,13): error TS2304: Cannot find name 'W'.
a.js(11,17): error TS2304: Cannot find name 'X'.
a.js(26,12): error TS2304: Cannot find name 'T'.


==== a.js (8 errors) ====
    /**
     * @template {{ a: number, b: string }} T,U A Comment
     * @template {{ c: boolean }} V uh ... are comments even supported??
     * @template W
     * @template X That last one had no comment
     * @param {T} t
               ~
!!! error TS2304: Cannot find name 'T'.
     * @param {U} u
               ~
!!! error TS2304: Cannot find name 'U'.
     * @param {V} v
               ~
!!! error TS2304: Cannot find name 'V'.
     * @param {W} w
               ~
!!! error TS2304: Cannot find name 'W'.
     * @param {X} x
               ~
!!! error TS2304: Cannot find name 'X'.
     * @return {W | X}
                ~
!!! error TS2304: Cannot find name 'W'.
                    ~
!!! error TS2304: Cannot find name 'X'.
     */
    function f(t, u, v, w, x) {
        if(t.a + t.b.length > u.a - u.b.length && v.c) {
            return w;
        }
        return x;
    }
    
    f({ a: 12, b: 'hi', c: null }, undefined, { c: false, d: 12, b: undefined }, 101, 'nope');
    f({ a: 12  }, undefined, undefined, 101, 'nope');
    
    /**
     * @template {NoLongerAllowed}
     * @template T preceding line's syntax is no longer allowed
     * @param {T} x
               ~
!!! error TS2304: Cannot find name 'T'.
     */
    function g(x) { }
    
    